<resources>
    <string name="app_name">ALAFitness</string>
    <string name="ala_fitness_app_logo">ALA_Fitness_app_logo</string>
    <string name="ala_fitness_name">ALA Fitness</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up_link">Sign Up</string>
    <string name="new_password">New password</string>
    <string name="retype_password">Retype new password</string>
    <string name="welcome">Welcome to ALA Fitness! Please create your username and password!</string>
    <string name="sign_in_please">If you already have a username and password, please sign in!</string>
    <string name="new_user">New user?</string>
    <string name="timed_pyramid">Timed pyramid</string>
    <string name="demo">DEMO</string>
    <string name="choose_your_workout">Choose your workout:</string>
    <string name="workout_stats">Workout stats:</string>
    <string name="total">total:</string>
    <string name="this_week">this week:</string>
    <string name="level_beginner">Level: Beginner</string>
    <string name="profile_picture">Profile picture</string>
    <string name="pyramid_icon">Pyramid icon</string>
    <string name="express_icon">Express Icon</string>
    <string name="exercise_type">Exercise Type</string>
    <string name="plank">Plank</string>
    <string name="start">START</string>
    <string name="next">NEXT</string>
    <string name="wk_type">Wk Type</string>
    <string name="exxercise_image">exxercise image</string>
    <string name="exit">EXIT</string>
    <string name="end_of_exercise_image">end of exercise image</string>
    <string name="pyramid">Pyramid</string>
    <string name="express">Express</string>
    <string name="exercises_remaining">exercises remaining</string>
</resources>